Added secondary research information on behavior and habits

--- a/secondary-research.html
+++ b/secondary-research.html
@@ -60,7 +60,7 @@
             </li>
             <li>Stephen Wendel's book, "Designing for Behavior Change"</li>
             <li>Kelly McGonigal's book, "The Willpower Instinct"</li>
-            <li>Nir Eval's book, "Hooked"</li>
+            <li>Nir Eyal's book, "Hooked"</li>
             <li>Charlie Rose Brain Series featuring Dr. Eric Kandel</li>
             <li>The Brain with David Eagleman - PBS series</li>
 
@@ -104,8 +104,7 @@
             with the
             individual in the context of a community. The neocortex, the
             latest region to evolve, is responsible for abstract reasoning.(The Brain from Top to Bottom)
-            Through studying patients with brain damage in areas connecting the emotional and reasoning centers in the
-            brain, that
+            Through studying patients with brain damage in areas connecting the emotional and reasoning centers, it was found that
             using the neocortex alone for decision making was not sufficient to arrive at sound decisions.
             ("How do I decide? The Brain with David Eagleman", 2015)
         </p>
@@ -141,7 +140,7 @@
             We don't have to expend significant conscious energy to figure out the physics involved in lifting nor
             monitoring
             what muscles to flex and extend as the action unfolds to bring a glass of water to our lips.
-            In addition, an intriguing finding is that the body interacts often with the subconscious, and physiological
+            In addition, an intriguing finding is that the body often interacts with the subconscious, and physiological
             indicators have been
             measured that show the subconscious and body can form accurate hunches with respect to complicated stimuli
             well before the conscious mind is aware of the same patterns. ("How do I decide? The Brain with David
@@ -160,20 +159,20 @@
             memory recall.
             System 1 will often, with a minimum amount of data inputs, draw a quick conclusion. Computing
             four plus by four for an educated adult, recalling one's mother's name, and recalling the capital where one
-            lives are examples of System 1 thought patterns. As one's expertise in a subject increases, some thinking in
+            lives are examples of System 1 thought patterns. (Kahneman, 2013) As one's expertise in a subject increases, some thinking in
             this
-            domain can shift from System 2 to System 1. One actually loses access to the details of how one arrives at
+            domain can shift from System 2 to System 1. One loses access to the details of how one arrives at
             such
-            decisions that were once constructed with great focus. For example, if you have ridden a bicycle for many
-            years, the
-            micro-decisions of how to balance, operate the brakes, and pedal the bicycle will be largely unconscious.
+            decisions that were once constructed with great focus. For example, if one is an experienced snow skier, the
+            mechanics of turning directions, stopping, or traversing a mogul field will be largely automatic versus
+            deliberately consciously guided on how to move one's arms, feet, thighs, calfs, and midsection. ("Who is in Control? The Brain with David Eagleman, 2015)
 
         </p>
 
         <p>
             The brain uses 20% of the body's blood supply and 20% of the oxygen, despite it only
-            accounting for 2% of the total mass of the body. TODO CITE - ("Neurons & Synapses - Memory & the Brain - The
-            Human Memory"))
+            accounting for 2% of the total mass of the body. ("Neurons & Synapses - Memory & the Brain - The
+            Human Memory")  The brain uses about the same energy as a traditional 60-watt lightbulb. (("Who is in Control? The Brain with David Eagleman, 2015)
             Processing System 1 thinking is significantly more expensive calorically than System 2 thinking and
             significantly slower. As a species that had
             to exist on the savannahs of Africa with big game species that could quickly threaten our lives, having an
@@ -182,14 +181,15 @@
             influence
             is widespread as a mechanism for quick responses and as an energy saving mechanism. It is often driving our
             behaviors
-            when we are not aware of its influence. System 2 thinking may rationalize choices made earlier by System 1
+            when we are not aware of its effect. System 2 thinking may rationalize choices made earlier by System 1
             and not
             be aware that the choices were not made by it directly. Fast thinking has biases that can lead to suboptimal
             decision
             making. System 1 favors short-term benefits to long-term ones, and is loss averse, curiously, it also tends
             to be optimistic and overconfident when gauging one's capabilities. System 1 tends to stereotype stimuli.
             Seeking
-            to take in inputs from many sources in one's conscious thinking can counteract many of these biases.
+            to take in inputs from many sources in one's conscious thinking can counteract many of these biases. (Kahneman, 2013)
+
 
         </p>
 
@@ -202,7 +202,13 @@
             to stimulation". (Behavior, www.merriam-webster.com)
             Behaviors can be one-time events or repeated occasionally or frequently.</p>
 
-        <p>TODO FOGG Behavior model</p>
+      <p>
+        The Fogg Behavior Model is helpful for understanding whether a behavior is likely to happen.
+      It states that a behavior will occur if the motivation, ability, and trigger all occur above their necessary
+      threshold values.  Although most behavioral change programs focus on motivation, Fogg recommends focusing on abilities
+        and triggers for maximum impact.(Fogg, behaviormodel.org)
+      </p>
+
 
 
         <p>
@@ -223,15 +229,22 @@
             repetitively execute a familiar behavior.
         </p>
 
-        <p>TODO The governmental model of behavior change</p>
-
+      <p>
+      Nir Eyal describes in his book "Hooked", a behavior pattern of a software application that seeks to induce a habit
+      to provide a timely trigger, which trigggers a simple user action who is given a variable reward, and invests further
+      the application by contributing content or other participation. (Eyal, 2014, pp. 6-10)  The variable reward
+      component of this system is powerful.  It taps into the highly stimulating release of dopamine associated with the
+      promise of reward for the user.  The dopamine delivery pathway is a powerful evolutionary arousal drive "chasing the promise of happiness", rather than the actual
+        fulfillment of reward. (McGonigal, 2012, pp. 105-133)
+      </p>
+       
 
         <h4>Habit Formation </h4>
 
         <p>
-            Although it is a popular understanding that habit formation occurs in twenty-one days. This has not been
-            validated
-            by experimental results.
+          Although it is a common belief that habit formation occurs in twenty-one days, this has not been validated
+          by experimental results.
+
         </p>
 
         <p>
@@ -239,14 +252,9 @@
             strength of an added healthy habit grew quickly then plateaued at an average of 66 days (following an
             asymptotic curve). However, the range users reached 95% of their asymptote, was from 18-254 days,
             highlighting the immense variability between subjects to solidify their habits.
-            Habits involving simpler actions were generally built more quickly than complex ones.
+            Habits involving simpler actions were built more quickly than complex ones.
             Habit formation was not appreciably impacted by missing a day.
-            Extrinsic rewards were not provided, but the subjects were allowed to select the habit to build.
-
-            <cite>TODO Source: <a href="http://onlinelibrary.wiley.com/doi/10.1002/ejsp.674/abstract">Lally, P., van
-                Jaarsveld, C. H. M., Potts, H. W. W. and Wardle, J. (2010), How are habits formed: Modelling habit
-                formation in the real world. Eur. J. Soc. Psychol., 40: 998–1009. doi: 10.1002/ejsp.674</a></cite>
-
+            Extrinsic rewards were not provided, but the subjects were allowed to select the habit to build.(Lally, 2009)
         </p>
 
         <p>
@@ -259,13 +267,10 @@
             <li>simple and easy to understand</li>
             <li>fun</li>
         </ol>
-        <cite>TODO Source: <a href="http://link.springer.com/article/10.1007%2Fs10865-015-9640-7">Exercise habit
-            formation
-            in new gym members: a longitudinal study. Journal of Behavioral Medicine
-            August 2015, Volume 38, Issue 4, pp 652-663</a></cite>
+      (Kaushal, 2015)
 
     </main>
-    <footer>
+    <p>
         <h4>Citations </h4>
 
         <p>Behavior. (n.d.). Retrieved January 4, 2016, from http://www.merriam-webster.com/dictionary/behavior</p>
@@ -277,12 +282,35 @@
             Retrieved February 10, 2016, from
             http://www.businessinsider.com/75-billion-devices-will-be-connected-to-the-internet-by-2020-2013-10</p>
 
+        <p>
+          Eyal, N. (2014). Hooked: How to build habit-forming products. New York, NY: Penguin Group.
+        </p>
+
+        <p>Fogg, B. (n.d.). BJ Fogg's Behavior Model. Retrieved March 20, 2016, from http://www.behaviormodel.org/</p>
+
+        <p>Kahneman, D. (2013). Thinking Fast and Slow. Farrar, Straus and Giroux.</p>
+
+        <p>
+          Kaushal, N., & Rhodes, R. E. (2015). Exercise habit formation in new gym members: A longitudinal study.
+          J Behav Med Journal of Behavioral Medicine, 38(4), 652-663.
+        </p>
+
+        <p>Lally, P., Jaarsveld, C. H., Potts, H. W., & Wardle, J. (2009). How are habits formed: Modelling habit
+          formation in the real world. European Journal of Social Psychology Eur. J. Soc. Psychol., 40(6), 998-1009.</p>
+
+        <p>McGonigal, K. (2012). The willpower instinct: How self-control works, why it matters, and what you can do to get more of it. New York: Avery.</p>
+
         <p>Neurons & Synapses - Memory & the Brain - The Human Memory. (n.d.). Retrieved February 12, 2016, from
             http://www.human-memory.net/brain_neurons.html</p>
 
         <p>Visual Processing: Cortical Pathways (Section 2, Chapter 15) Neuroscience Online: An Electronic Textbook for
             the Neurosciences | Department of Neurobiology and Anatomy - The University of Texas Medical School at
-            Houston. (n.d.). Retrieved February 12, 2016, from http://neuroscience.uth.tmc.edu/s2/chapter15.html</p>
+            Houston. (n.d.). Retrieved February 12, 2016, from http://neuroscience.uth.tmc.edu/s2/chapter15.html
+        </p>
+
+
+        <p>Who is in Control? [Television series episode]. (2015, October 28). In The Brain with David Eagleman. Austin, TX: PBS.</p>
+
         <nav>
             <a href="/index.html">Home</a><a href="/design-criteria.html">Next - Design Criteria</a>
         </nav>
