added Transtheoretical Model discussion

--- a/secondary-research.html
+++ b/secondary-research.html
@@ -235,8 +235,36 @@
     </p>
 
     <p>
+      The Transtheoretical Model (TTM) attempts to describe the stages of change along with key processes of change when
+      a person
+      is need of making significant habit changes for health reasons. It
+      brings to light the fact that less than 20% of at-risk individuals are ready to implement behavior change, and
+      that
+      the time line for change can be many years. People often does not progress through the stages of change in a
+      monotonically progressive path, but rather are likely to have setbacks and move backwards through the stages at
+      points
+      in their ways. The TTM describes a series of states prior to being ready for action. Attempting change when a
+      person
+      is not ready, can further discourage the individual in the future. The stages of change in the TTM are:
+    </p>
+    <ol>
+      <li>Precontemplation</li>
+      <li>Contemplation</li>
+      <li>Preparation</li>
+      <li>Action</li>
+      <li>Maintenance and</li>
+      <li>Termination</li>
+    </ol>
+    <p>
+      Each stage has one or more processes of change associated with it. For example, in precontemplation, consciousness
+      raising,
+      environmental reevaluation, dramatic relief, and social liberation are applicable. (Transtheoretical Model or
+      Stages of Change)
+    </p>
+
+    <p>
       Nir Eyal describes in his book "Hooked", a behavior pattern of a software application that seeks to induce a habit
-      to provide a timely trigger, which trigggers a simple user action who is given a variable reward, and invests
+      to provide a timely trigger, which triggers a simple user action who is given a variable reward, and invests
       further
       the application by contributing content or other participation. (Eyal, 2014, pp. 6-10) The variable reward
       component of this system is powerful. It taps into the highly stimulating release of dopamine associated with the
@@ -277,62 +305,64 @@
     (Kaushal, 2015)
 
   </main>
-  <p>
-  <h4>Citations </h4>
+  <footer>
+    <h4>Citations </h4>
 
-  <p>Behavior. (n.d.). Retrieved January 4, 2016, from http://www.merriam-webster.com/dictionary/behavior</p>
+    <p>Behavior. (n.d.). Retrieved January 4, 2016, from http://www.merriam-webster.com/dictionary/behavior</p>
 
-  <p>The Brain from Top to Bottom. (n.d.). Retrieved February 12, 2016, from
-    http://thebrain.mcgill.ca/flash/d/d_05/d_05_cr/d_05_cr_her/d_05_cr_her.html</p>
+    <p>The Brain from Top to Bottom. (n.d.). Retrieved February 12, 2016, from
+      http://thebrain.mcgill.ca/flash/d/d_05/d_05_cr/d_05_cr_her/d_05_cr_her.html</p>
 
-  <p>Danova, T. (2013). Morgan Stanley: 75 Billion Devices Will Be Connected To The Internet Of Things By 2020.
-    Retrieved February 10, 2016, from
-    http://www.businessinsider.com/75-billion-devices-will-be-connected-to-the-internet-by-2020-2013-10</p>
+    <p>Danova, T. (2013). Morgan Stanley: 75 Billion Devices Will Be Connected To The Internet Of Things By 2020.
+      Retrieved February 10, 2016, from
+      http://www.businessinsider.com/75-billion-devices-will-be-connected-to-the-internet-by-2020-2013-10</p>
 
-  <p>
-    Eyal, N. (2014). Hooked: How to build habit-forming products. New York, NY: Penguin Group.
-  </p>
+    <p>
+      Eyal, N. (2014). Hooked: How to build habit-forming products. New York, NY: Penguin Group.
+    </p>
 
-  <p>Fogg, B. (n.d.). BJ Fogg's Behavior Model. Retrieved March 20, 2016, from http://www.behaviormodel.org/</p>
+    <p>Fogg, B. (n.d.). BJ Fogg's Behavior Model. Retrieved March 20, 2016, from http://www.behaviormodel.org/</p>
 
-  <p>How Do I Decide? [Television series episode]. (2015, October 28). In The Brain with David Eagleman. Austin, TX:
-    PBS.</p>
-
-
-  <p>Kahneman, D. (2013). Thinking Fast and Slow. Farrar, Straus and Giroux.</p>
-
-  <p>
-    Kaushal, N., & Rhodes, R. E. (2015). Exercise habit formation in new gym members: A longitudinal study.
-    J Behav Med Journal of Behavioral Medicine, 38(4), 652-663.
-  </p>
-
-  <p>Lally, P., Jaarsveld, C. H., Potts, H. W., & Wardle, J. (2009). How are habits formed: Modelling habit
-    formation in the real world. European Journal of Social Psychology Eur. J. Soc. Psychol., 40(6), 998-1009.</p>
-
-  <p>McGonigal, K. (2012). The willpower instinct: How self-control works, why it matters, and what you can do to get
-    more of it. New York: Avery.</p>
-
-  <p>Neurons & Synapses - Memory & the Brain - The Human Memory. (n.d.). Retrieved February 12, 2016, from
-    http://www.human-memory.net/brain_neurons.html</p>
-
-  <p>Visual Processing: Cortical Pathways (Section 2, Chapter 15) Neuroscience Online: An Electronic Textbook for
-    the Neurosciences | Department of Neurobiology and Anatomy - The University of Texas Medical School at
-    Houston. (n.d.). Retrieved February 12, 2016, from http://neuroscience.uth.tmc.edu/s2/chapter15.html
-  </p>
+    <p>How Do I Decide? [Television series episode]. (2015, October 28). In The Brain with David Eagleman. Austin, TX:
+      PBS.</p>
 
 
-  <p>Who is in Control? [Television series episode]. (2015, October 28). In The Brain with David Eagleman. Austin, TX:
-    PBS.</p>
+    <p>Kahneman, D. (2013). Thinking Fast and Slow. Farrar, Straus and Giroux.</p>
 
-  <nav>
-    <a href="/index.html">Home</a><a href="/design-criteria.html">Next - Design Criteria</a>
-  </nav>
-  <div class="centered big-margin"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img
-    alt="Creative Commons License" style="border-width:0"
-    src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png"/></a><br/>This work is licensed under a <a
-    rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons
-    Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.
-  </div>
+    <p>
+      Kaushal, N., & Rhodes, R. E. (2015). Exercise habit formation in new gym members: A longitudinal study.
+      J Behav Med Journal of Behavioral Medicine, 38(4), 652-663.
+    </p>
+
+    <p>Lally, P., Jaarsveld, C. H., Potts, H. W., & Wardle, J. (2009). How are habits formed: Modelling habit
+      formation in the real world. European Journal of Social Psychology Eur. J. Soc. Psychol., 40(6), 998-1009.</p>
+
+    <p>McGonigal, K. (2012). The willpower instinct: How self-control works, why it matters, and what you can do to get
+      more of it. New York: Avery.</p>
+
+    <p>Neurons & Synapses - Memory & the Brain - The Human Memory. (n.d.). Retrieved February 12, 2016, from
+      http://www.human-memory.net/brain_neurons.html</p>
+
+    <p>Transtheoretical Model (or Stages of Change) - Health Behavior Change. (n.d.). Retrieved March 21, 2016,
+      from http://www.prochange.com/transtheoretical-model-of-behavior-change</p>
+
+    <p>Visual Processing: Cortical Pathways (Section 2, Chapter 15) Neuroscience Online: An Electronic Textbook for
+      the Neurosciences | Department of Neurobiology and Anatomy - The University of Texas Medical School at
+      Houston. (n.d.). Retrieved February 12, 2016, from http://neuroscience.uth.tmc.edu/s2/chapter15.html
+    </p>
+
+    <p>Who is in Control? [Television series episode]. (2015, October 28). In The Brain with David Eagleman. Austin, TX:
+      PBS.</p>
+
+    <nav>
+      <a href="/index.html">Home</a><a href="/design-criteria.html">Next - Design Criteria</a>
+    </nav>
+    <div class="centered big-margin"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><img
+      alt="Creative Commons License" style="border-width:0"
+      src="https://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png"/></a><br/>This work is licensed under a <a
+      rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/">Creative Commons
+      Attribution-NonCommercial-ShareAlike 3.0 Unported License</a>.
+    </div>
   </footer>
 </div>
 
