--- a/secondary-research.html
+++ b/secondary-research.html
@@ -237,10 +237,10 @@
     <p>
       The Transtheoretical Model (TTM) attempts to describe the stages of change along with key processes of change when
       a person
-      is need of making significant habit changes for health reasons. It
+      is in need of making significant habit changes for health reasons. It
       brings to light the fact that less than 20% of at-risk individuals are ready to implement behavior change, and
       that
-      the time line for change can be many years. People often does not progress through the stages of change in a
+      the timeline for change can be many years. People often do not progress through the stages of change in a
       monotonically progressive path, but rather are likely to have setbacks and move backwards through the stages at
       points
       in their ways. The TTM describes a series of states prior to being ready for action. Attempting change when a
