added reference for one of BJ Fogg's sites and some minor edits.

--- a/secondary-research.html
+++ b/secondary-research.html
@@ -229,9 +229,9 @@
       characteristics
       and behavior type (as in new behaviors, familiar behaviors, behaviors you want to increase in duration,
       etc.) There are
-      reports available for strategies for any given cell in the table. For example, there is one documenting how
+      reports available for strategies for any given cell in the table. For example, the "Blue Path" documenting how
       one can
-      repetitively execute a familiar behavior.
+      repetitively execute a familiar behavior. (Fogg, behaviorgrid.org)
     </p>
 
     <p>
@@ -296,7 +296,7 @@
       Another study examined the habit formation for exercise workouts. Four workouts a week for six weeks was the
       minimum effort required to build
       a successful new gym-based workout habit. To form the habit,
-      workouts need to be (ranked with most important criteria first):</p>
+      exercises need to be (ranked with most important criteria first):</p>
     <ol>
       <li>consistently performed</li>
       <li>simple and easy to understand</li>
@@ -320,6 +320,8 @@
     <p>
       Eyal, N. (2014). Hooked: How to build habit-forming products. New York, NY: Penguin Group.
     </p>
+
+    <p>Fogg, B. (n.d.). The Behavior Grid. Retrieved March 21, 2016, from http://www.behaviorgrid.org/</p>
 
     <p>Fogg, B. (n.d.). BJ Fogg's Behavior Model. Retrieved March 20, 2016, from http://www.behaviormodel.org/</p>
 
