fixing minor html5 validation errors

--- a/project-goals.html
+++ b/project-goals.html
@@ -37,11 +37,9 @@
 
     </header>
 
-
-    <br>
+    <main>
 
         <h3>Guiding Principles</h3>
-
 
         <ul>
             <li>to provide a tool or tools that support the user in building beneficial habits</li>
