minor formatting changes

--- a/secondary-research.html
+++ b/secondary-research.html
@@ -289,7 +289,7 @@
       highlighting the immense variability between subjects to solidify their habits.
       Habits involving simpler actions were built more quickly than complex ones.
       Habit formation was not appreciably impacted by missing a day.
-      Extrinsic rewards were not provided, but the subjects were allowed to select the habit to build.(Lally, 2009)
+      Extrinsic rewards were not provided, but the subjects were allowed to select the habit to build. (Lally, 2009)
     </p>
 
     <p>
@@ -300,9 +300,8 @@
     <ol>
       <li>consistently performed</li>
       <li>simple and easy to understand</li>
-      <li>fun</li>
+      <li>fun (Kaushal, 2015)</li>
     </ol>
-    (Kaushal, 2015)
 
   </main>
   <footer>
