--- a/personas.html
+++ b/personas.html
@@ -45,8 +45,10 @@
             The following personas were generated as amalgams of potential user types:
         </h3>
         <ul>
-            <li><a href="persona-jennifer.pdf">Jennifer</a></li>
-            <li><a href="persona-steve.pdf">Steve</a></li>
+          <li><a href="persona-jason.pdf">Jason</a></li>
+          <li><a href="persona-jennifer.pdf">Jennifer</a></li>
+          <li><a href="persona-stacey.pdf">Stacey</a></li>
+          <li><a href="persona-steve.pdf">Steve</a></li>
         </ul>
     </main>
     <footer>
