--- a/secondary-research.html
+++ b/secondary-research.html
@@ -74,7 +74,7 @@
 
     <p>
       The brain is a marvelously complex instrument and brain research while making tremendous strides, is still
-      in its relative infancy. The brain contains more than 100 billion neurons and each connects
+      in its relative infancy. The brain contains more than 100 billion neurons, and each connects
       with between
       1000 and 10,000 other cells. ("Neurons & Synapses - Memory & the Brain - The Human Memory") Consider that
       you have
