Reworked the home page implementation.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <div class="container">
 
     <header class="row">
-        <div class="five columns"><h2>Design Challenge</h2></div>
-        <div class="seven columns"><h4>How to support individuals as they attempt to live more fulfilling lives by
+        <div class="four columns"><h3>Design Challenge</h3></div>
+        <div class="eight columns"><h4>How to support individuals as they attempt to live more fulfilling lives by
             adding positive
             habits to their daily routine?</h4></div>
     </header>
@@ -40,30 +40,29 @@
 
     <nav>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="/project-goals.html">Project Goals</a></div>
+            <a class="button-link " href="/project-goals.html">Project Goals</a>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="/needs-finding.html">Needs Finding</a></div>
+            <a class="button-link centered" href="/needs-finding.html">Needs Finding</a>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="/personas.html">Personas</a></div>
+            <a class="button-link centered" href="/personas.html">Personas</a>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="/secondary-research.html">Secondary Research</a>
-            </div>
+            <a class="button-link centered" href="/secondary-research.html">Secondary Research</a>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="/design-criteria.html">Design Criteria</a></div>
+            <a class="button-link centered" href="/design-criteria.html">Design Criteria</a>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="/conceptual-design.html">Conceptual Design
-                Exploration</a></div>
+            <a class="button-link centered" href="/conceptual-design.html">Conceptual Design
+                Exploration</a>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="/detailed-design.html">Detailed Design</a></div>
+            <a class="button-link centered" href="/detailed-design.html">Detailed Design</a>
         </div>
         <div class="row">
-            <div class="centered processes"><a class="centered" href="https://github.com/alanmay/design-mindfulprogressorg">Source Files on GitHub</a></div>
+            <a class="button-link centered" href="https://github.com/alanmay/design-mindfulprogressorg">Source Files on GitHub</a>
         </div>
 
     </nav>
