Adding link to first prototype of on boarding

--- a/detailed-design.html
+++ b/detailed-design.html
@@ -41,7 +41,8 @@
     <main>
         <h3>Version 1 Mockups</h3>
         <p>
-          <a href="mockups/v1/emotional%20onboarding.pdf">Day 0 - Onboarding mockups</a>
+          <a href="http://share.framerjs.com/kphxqscotkjr/">Day 0 - Onboarding Rough Prototype</a>
+          
         </p>
         <p>
           <a href="mockups/v1/daily-1st.pdf">Day 1 - First Morning mockups</a>
