--- a/secondary-research.html
+++ b/secondary-research.html
@@ -132,8 +132,8 @@
         surroundings
       </li>
       <li>keep our organs and vital systems functioning</li>
-      <li>allow us to anticipate events in the future, and remember past events through visual, auditory,
-        olfactory,
+      <li>allow us to anticipate events in the future, and recall events through reconstruction of separate visual, auditory,
+        olfactory, tactile, gustatory, and sense memories
       </li>
       <li>enable us to love other members of our species</li>
     </ul>
