Add additional secondary research notes on brain regions and gamification inspiration

--- a/secondary-research.html
+++ b/secondary-research.html
@@ -63,7 +63,7 @@
       <li>Nir Eyal's book, "Hooked"</li>
       <li>Charlie Rose Brain Series featuring Dr. Eric Kandel</li>
       <li>The Brain with David Eagleman - PBS series</li>
-
+      <li>Yu-Kai Chou's book, "Actionable Gamification:  Beyond Points, Badges, and Leaderboards</li>
 
     </ul>
 
@@ -118,7 +118,9 @@
       issues we completely take for granted, such as being able to detect edges on surfaces, being able to store
       visual memories, and to be able to recognize that a shape is a human face then match it to a known face.
       ("Visual Processing: Cortical Pathways ") There are many
-      such systems in the brain. (http://neuroscience.uth.tmc.edu/s2/chapter15.html)
+      such systems in the brain. (http://neuroscience.uth.tmc.edu/s2/chapter15.html)  The human brain also has general purpose
+      processing circuitry.  There is debate within the cognitive science and neuroscience communities as to the
+      extent of this specialization of this processing.(Kanwisher, "The Modular Design Of the Human Brain")
 
     </p>
 
@@ -330,6 +332,8 @@
 
     <p>Kahneman, D. (2013). Thinking Fast and Slow. Farrar, Straus and Giroux.</p>
 
+    <p>Kanwisher, N. (n.d.). Nancy'sBrainTalks. Retrieved May 06, 2016, from http://nancysbraintalks.mit.edu/video/modular-design-human-brain</p>
+
     <p>
       Kaushal, N., & Rhodes, R. E. (2015). Exercise habit formation in new gym members: A longitudinal study.
       J Behav Med Journal of Behavioral Medicine, 38(4), 652-663.
@@ -337,7 +341,6 @@
 
     <p>Lally, P., Jaarsveld, C. H., Potts, H. W., & Wardle, J. (2009). How are habits formed: Modelling habit
       formation in the real world. European Journal of Social Psychology Eur. J. Soc. Psychol., 40(6), 998-1009.</p>
-
     <p>McGonigal, K. (2012). The willpower instinct: How self-control works, why it matters, and what you can do to get
       more of it. New York: Avery.</p>
 
