correcting missing quote from text

--- a/secondary-research.html
+++ b/secondary-research.html
@@ -63,7 +63,7 @@
       <li>Nir Eyal's book, "Hooked"</li>
       <li>Charlie Rose Brain Series featuring Dr. Eric Kandel</li>
       <li>The Brain with David Eagleman - PBS series</li>
-      <li>Yu-Kai Chou's book, "Actionable Gamification:  Beyond Points, Badges, and Leaderboards</li>
+      <li>Yu-Kai Chou's book, "Actionable Gamification:  Beyond Points, Badges, and Leaderboards"</li>
 
     </ul>
 
