Adding info on diary study

--- a/conceptual-design.html
+++ b/conceptual-design.html
@@ -39,9 +39,8 @@
     <main>
         <h3>Key Concepts</h3>
         <ul>
-            <li>All designs are based on the concept of chaining of triggers for habit formation, linking the completion
-                of one habit to
-                trigger the execution of the next habit in a chain
+            <li>These designs are based on the concept of chaining of triggers for habit formation, linking the completion
+                of one habit to trigger the execution of the next habit in a chain
             </li>
             <li>The initial trigger is the user waking. The idea is for the user to execute one of these concepts
                 immediate on rising, before doing anything else.
