--- a/needs-finding.html
+++ b/needs-finding.html
@@ -146,7 +146,7 @@
 
         <div class="survey-component">
             <h4>Survey Questions</h4>
-            <a href="survey1questions.html">Survey 2 Question</a>
+            <a href="survey2questions.html">Survey 2 Question</a>
         </div>
 
         <div class="survey-component">
@@ -215,7 +215,18 @@
                 Responses</a>
         </div>
 
-
+        <h2>Diary Study Focusing on the First Hour of the Day</h2>
+        <div class="survey-component">
+            Based on the findings in survey 1, there was a clear preference expressed by the majority of respondents
+          to work on healthy behaviors first thing in the morning.  This diary study's goal is to explore environmental
+          factors prior to the introduction of any type of solution.
+          <p>
+            <a href="/research/diary%20study%20information%20and%20release.pdf">Study Explanation for Participants and Release</a>
+          </p>
+          <p>
+            Results to be published here on conclusion of study.
+          </p>
+        </div>
     </main>
     <footer>
         <nav>
