Adding Links to Onboarding Wireframes on Detailed Design Page

--- a/detailed-design.html
+++ b/detailed-design.html
@@ -32,28 +32,40 @@
 
     <header class="row">
         <div class="centered">
-            <h1>Detailed Design</h1>
+            <h1>Detailed Design - UNDER DEVELOPMENT</h1>
         </div>
 
     </header>
 
 
     <main>
-        <h3>Version 1 Mockups</h3>
-        <p>
-          <a href="http://share.framerjs.com/kphxqscotkjr/">Day 0 - Onboarding Rough Prototype</a>
-          
-        </p>
-        <p>
-          <a href="mockups/v1/daily-1st.pdf">Day 1 - First Morning mockups</a>
-        </p>
 
-        <p>
 
-            Mockups and prototypes will be deployed here as they are produced.  Iterative user testing
+
+      <p>
+
+        Wireframes, Mockups, and prototypes will be deployed here as they are produced.  Iterative user testing
         will be performed on these deliverables to test whether users feel the proposed solution is fitting their needs
         and gathering additional feedback on the exact nature of those needs.
-        </p>
+      </p>
+      <h3>Version 1 Mockups </h3>
+      <h4>Use Case #1 - User Onboarding and Initial Routine Activities Selection</h4>
+      <p>
+        <a href="/mockups/v1/OnboardingWireframes.pdf">Onboarding Wireframes</a>
+      </p>
+
+      <h4>Use Case #2 - Day 1 - Starting Minimally</h4>
+      <p></p>
+      <h4>Use Case #3 - Day 2 - Reveal the bottom menu (revealing only the activity editor)</h4>
+      <p></p>
+      <h4>Use Case #3 - Day 3 - Normal Flow With Evolutions</h4>
+      <p></p>
+      <h4>Use Case #4 - Day 5 - Other variations</h4>
+      <p></p>
+      <h4>Use Case #5 - Day 12- Setback Recovery</h4>
+      <p></p>
+      <h4>Use Case #6 - Other Notifications</h4>
+      <p></p>
     </main>
     <footer>
         <nav>
