updating language on detailed design

--- a/detailed-design.html
+++ b/detailed-design.html
@@ -55,7 +55,7 @@
       </p>
 
       <h4>Use Case #2 - Day 1 - Starting Minimally</h4>
-      <p><a href="/mockups/v1/Daily-FirstDay-Wireframes.pdf">Day 1 part 1</a></p>
+      <p><a href="/mockups/v1/Daily-FirstDay-Wireframes.pdf">Day 1 Part 1 Wireframes</a></p>
       <h4>Use Case #3 - Day 2 - Reveal the bottom menu (revealing only the activity editor)</h4>
       <p></p>
       <h4>Use Case #3 - Day 3 - Normal Flow With Evolutions</h4>
